# visualizer-bachelor

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  config.json  config_test.json  vcpkg.json
.githooks/: pre-commit
conf2/: .gitignore  CMakeLists.txt  code_generator.py
conf2/configs/: config_gemm_blocked_32x32x32_simple.json  config_gemm_strided_32x32x32_simple.json  config_jacobi2d_blocked_32x32x32_simple.json  config_jacobi2d_strided_32x32x32_simple.json  visualizer_gemm_strided.cpp
conf2/src/: CMakeLists.txt  Config.hpp  asset_utilities.cpp  asset_utilities.hpp  config_template.in  entity_utilities.cpp  entity_utilities.hpp  main.cpp  output.cpp  output.hpp  processing.cpp  processing.hpp
include/visualizer/: AlignedMemory.hpp  Camera.hpp  CameraInitializationSystem.hpp  CameraMovementSystem.hpp  ComponentManager.hpp  CubeInitializationSystem.hpp  CubeTickInfo.hpp  DrawableCube.hpp  EntityComponentMap.hpp  EntityComponentMap.impl  EntityQuery.hpp  EntityQuery.impl  Framebuffer.hpp  Mesh.hpp  MeshDrawingSystem.hpp  Renderbuffer.hpp  Scene.hpp  SceneObject.hpp  Shader.hpp  SubScene.hpp  SystemManager.hpp  SystemManager.impl  Systems.hpp  TextDrawingSystem.hpp  Texture.hpp  Transform.hpp  TupleUtils.hpp  TypeId.hpp  UIText.hpp  Utilities.hpp  VertexAttributeBuffer.hpp  Visualizer.hpp  VisualizerConfiguration.hpp  World.hpp
mdh2vis/: .gitignore  gemm_mdh.json  gemm_tps.json  gemm_tps_karl.json  mdhunfold.py  model.json  model_karl.json  stencil_mdh.json  stencil_tps.json
mdh2vis/src/: CMakeLists.txt  MDHConfig.cpp  MDHConfig.hpp  MDHOps.cpp.in  MDHOps.hpp  asset_creation.cpp  asset_creation.hpp  entity_generation.cpp  entity_generation.hpp  generation.cpp  generation.hpp  main.cpp  processing.cpp  processing.hpp  templates.hpp
meetings/: .gitignore  presentation.cls
meetings/2020-04-28/: main.tex  spec.json
meetings/2020-05-12/: main.tex
meetings/2020-05-19/: ecs.cpp  main.tex  welt.cpp
meetings/2020-05-26/: CubeMovementSystem.cpp  SystemManager.cpp  main.tex
meetings/2020-06-02/: main.tex
meetings/2020-06-09/: main.tex
meetings/2020-06-16/: main.tex
meetings/2020-06-23/: asset.json  component.json  entity.json  main.tex  mdh2vis.sh  visconfig.json
meetings/2020-06-30/: main.tex  visconfig_assets_1.json  visconfig_assets_2.json  visconfig_assets_3.json  visconfig_camera.json  visconfig_composit.json  visconfig_options.json
meetings/2020-07-07/: gemm_output.txt  main.tex  stencil_output.txt
meetings/2020-07-14/: MDHOps_comb.cpp  MDHOps_ops.cpp  main.tex  mdh_path.txt
meetings/2020-07-28/: main.tex
meetings/2020-08-04/: main.tex
meetings/2020-08-11/: main.tex
meetings/2020-08-18/: main.tex
meetings/2020-08-24/: main.tex
meetings/2020-09-01/: main.tex
meetings/final/: .bib  camera_query.cpp  main.bib  main.tex  nvidia.bib  presentation.cls
meetings/final/listings/: gemm_tps.json  jacobi_2d_static_1.cl_preprocessed.cl  matmul_row_major_nn_static_1.cl_preprocessed.cl  mdh_gemm.txt  mdh_stencil.txt  model.json  model_cuda.txt  model_multi_dev.txt  model_opencl.txt  tps.txt
shader/: compositing.fs.glsl  compositing.vs.glsl  cube.fs.glsl  cube.vs.glsl
spec/: MDH2Vis.md  VisualizerConfiguration.md
spec/tools/: MDH2Vis.md
src/: CMakeLists.txt  CameraMovementSystem.cpp  ComponentManager.cpp  CubeInitializationSystem.cpp  CubeMovementSystem.cpp  DrawableCube.cpp  EntityArchetype.cpp  EntityComponentMap.cpp  EntityManager.cpp  EntityQuery.cpp  Framebuffer.cpp  Mesh.cpp  MeshDrawingSystem.cpp  Scene.cpp  SceneObject.cpp  Shader.cpp  SystemManager.cpp  Systems.cpp  TextDrawingSystem.cpp  Texture.cpp  Transform.cpp  Utilities.cpp  VertexAttributeBuffer.cpp  Visualizer.cpp  VisualizerConfiguration.cpp  main.cpp
test/: CMakeLists.txt  VisualizerConfigurationTests.cpp  config.json
tools/: CMakeLists.txt
tools/mdh2vis/: CMakeLists.txt
tools/mdh2vis/src/: CMakeLists.txt
visconfig/: CMakeLists.txt
visconfig/include/visconfig/: Assets.hpp  Components.hpp  Config.hpp
visconfig/src/: Assets.cpp  Components.cpp  Config.cpp
visualizer/: CMakeLists.txt  config.json
visualizer/assets/shaders/: compositing.fs.glsl  cube.fs.glsl  cube.vs.glsl  cuboid.fs.glsl  cuboid.vs.glsl  cuboid_diffuse.fs.glsl  cuboid_oit.fs.glsl  cuboid_oit_blend.fs.glsl  cuboid_oit_blend.vs.glsl
visualizer/include/visualizer/: ActiveCameraSwitcher.hpp  AlignedMemory.hpp  AssetDatabase.hpp  AtomicCounterBuffer.hpp  Camera.hpp  CameraSwitchingSystem.hpp  CameraTypeSwitchingSystem.hpp  Canvas.hpp  ComplexVertexAttributeBuffer.hpp  ComponentManager.hpp  CompositingSystem.hpp  Composition.hpp  Cube.hpp  CubeMovementSystem.hpp  CubeTickInfo.hpp  CuboidCommandList.hpp  CuboidCommandSystem.hpp  Entity.hpp  EntityArchetype.hpp  EntityArchetype.impl  EntityContainer.hpp  EntityDBQuery.hpp  EntityDBQuery.impl  EntityDatabase.hpp  EntityDatabase.impl  EntityManager.hpp  EntityQuery.hpp  FixedCamera.hpp  FixedCameraMovementSystem.hpp  Framebuffer.hpp  FreeFly.hpp  FreeFlyCameraMovementSystem.hpp  GUISystem.hpp  GenericBuffer.hpp  Iteration.hpp  MaterialWindowSystem.hpp  Mesh.hpp  MeshDrawingSystem.hpp  Parent.hpp  RenderLayer.hpp  (+12 more)
visualizer/shader/: cube.vs.glsl
visualizer/src/: AssetDatabase.cpp  AtomicCounterBuffer.cpp  CameraInitializationSystem.cpp  CameraMovementSystem.cpp  CameraSwitchingSystem.cpp  CameraTypeSwitchingSystem.cpp  ComplexVertexAttributeBuffer.cpp  ComponentManager.cpp  CompositingSystem.cpp  CubeInitializationSystem.cpp  CubeMovementSystem.cpp  CuboidCommandSystem.cpp  Entity.cpp  EntityArchetype.cpp  EntityComponentMap.cpp  EntityContainer.cpp  EntityDBQuery.cpp  EntityDatabase.cpp  EntityManager.cpp  EntityQuery.cpp  FixedCameraMovementSystem.cpp  Framebuffer.cpp  FreeFlyCameraMovementSystem.cpp  GUISystem.cpp  GenericBuffer.cpp  MaterialWindowSystem.cpp  Mesh.cpp  MeshDrawingSystem.cpp  Renderbuffer.cpp  Scene.cpp  Shader.cpp  TextDrawingSystem.cpp  Texture.cpp  VertexAttributeBuffer.cpp  Visualizer.cpp  World.cpp  main.cpp
visualizer/test/: CMakeLists.txt
